# zuripay

./: .gitignore  README.md
backend/: package-lock.json  package.json
backend/src/: index.ts  solver.ts  worker.ts
backend/src/api/: server.ts
backend/src/lib/: eth.ts  nearClient.ts  solana.ts  zcashClient.ts  zcashLightClient.ts
backend/src/models/: payment.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: SendForm.tsx  StatusTimeline.tsx
frontend/src/lib/: api.ts  eth.ts  sol.ts  solanaSend.ts
near-contract/: Cargo.toml
near-contract/src/: lib.rs
zuripay/backend/: package.json
zuripay/backend/src/: worker.ts
zuripay/backend/src/api/: server.ts
zuripay/backend/src/lib/: eth.ts  zcashClient.ts
zuripay/frontend/: index.html  tsconfig.json
zuripay/frontend/src/: index.css
zuripay/frontend/src/components/: SendForm.tsx
zuripay/frontend/src/lib/: api.ts  eth.ts
