[package]
name = "zuripay-intents"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.20.0"
borsh = { version = "1.3.0", features = ["unstable__schema"] }
schemars = "0.8.22"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
